--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </nav>
-
+<!-- update -->
     <!-- Hero Section -->
     <div class="bg-gradient-to-r from-blue-600 to-indigo-700 text-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
