--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
     </footer>
-
+<!-- updated lib -->
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const listContainer = document.getElementById('ebook-list');
