--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
             <div class="text-center">
                 <h2 class="text-4xl font-extrabold mb-3 flex items-center justify-center space-x-3">
                     <i class="fas fa-books text-blue-200"></i>
-                    <span>Welcome to Electronic Librarry SMAN 3 Singaraja</span>
+                    <span>Welcome to Electronic Librarry Smantiara</span>
                 </h2>
                 <p class="text-lg text-blue-100 max-w-2xl mx-auto">Temukan cerpen favoritmu!</p>
             </div>
